@@ -1,3 +1,6 @@
+2012-04-18
+ * functional multiple channels readout, getDataBuffer function
+
 0.9.1-1
 =====
 
